// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleCard should render with a eventType name, target name, filter passthrow and skip execution enable 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-275 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header rule card"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-276"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-288 makeStyles-ruleCardAvatarOrange-292 MuiAvatar-colorDefault"
        >
          T
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 2
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-277"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-278"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-279 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-280 MuiTypography-body1"
        >
          EventType 2-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-278"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-279 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-280 MuiTypography-body1"
        >
          Target 2-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-281"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-279 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="filter expression passthrow"
            class="makeStyles-ruleCardFilterExpressionPassthrow-396"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6"
            >
              PASSTHROW
            </h6>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-282"
      >
        <div
          class="makeStyles-ruleCardStatusDate-283"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          />
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-284"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          >
            Skip Consecutives
          </p>
          <div
            aria-label="skip consecutives enable"
            class="makeStyles-onShotLabel-285 makeStyles-onShotLabelOn-286"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleCard should render with a eventType name, target name, filters and skip execution disable 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-138 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header rule card"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-139"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-151 makeStyles-ruleCardAvatarPurple-154 MuiAvatar-colorDefault"
        >
          R
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 3
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-140"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-141"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-142 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-143 MuiTypography-body1"
        >
          EventType 3-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-141"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-142 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-143 MuiTypography-body1"
        >
          Target 3-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-144"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-142 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-256"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-257"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-258 MuiTypography-body1"
              >
                One Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-263"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-260 MuiTypography-body1"
              >
                hola
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-261 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-262 MuiTypography-body1"
              >
                1
              </p>
            </div>
          </div>
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-256"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-257"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-258 MuiTypography-body1"
              >
                All Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-263"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-260 MuiTypography-body1"
              >
                adios
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-261 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-262 MuiTypography-body1"
              >
                2
              </p>
            </div>
          </div>
          <div
            aria-label="filter expression comparator"
            class="makeStyles-ruleCardFilterExpression-263"
          >
            <p
              aria-label="filter expression field"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-260 MuiTypography-body1"
            >
              p1
            </p>
            <p
              aria-label="filter expression operator"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-261 MuiTypography-body1"
            >
              =
            </p>
            <p
              aria-label="filter expression value"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-262 MuiTypography-body1"
            >
              valor
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-145"
      >
        <div
          class="makeStyles-ruleCardStatusDate-146"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          />
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-147"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          >
            Skip Consecutives
          </p>
          <div
            aria-label="skip consecutives disable"
            class="makeStyles-onShotLabel-148 makeStyles-onShotLabelOff-150"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleCard should render with a rule and snap 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header rule card"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-2"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-14 makeStyles-ruleCardAvatarPurple-17 MuiAvatar-colorDefault"
        >
          R
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 3
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-3"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-4"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-6 MuiTypography-body1"
        >
          EventType 3-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-4"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-6 MuiTypography-body1"
        >
          Target 3-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-7"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-119"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-120"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-121 MuiTypography-body1"
              >
                One Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-126"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-123 MuiTypography-body1"
              >
                hola
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-124 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-125 MuiTypography-body1"
              >
                1
              </p>
            </div>
          </div>
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-119"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-120"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-121 MuiTypography-body1"
              >
                All Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-126"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-123 MuiTypography-body1"
              >
                adios
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-124 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-125 MuiTypography-body1"
              >
                2
              </p>
            </div>
          </div>
          <div
            aria-label="filter expression comparator"
            class="makeStyles-ruleCardFilterExpression-126"
          >
            <p
              aria-label="filter expression field"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-123 MuiTypography-body1"
            >
              p1
            </p>
            <p
              aria-label="filter expression operator"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-124 MuiTypography-body1"
            >
              =
            </p>
            <p
              aria-label="filter expression value"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-125 MuiTypography-body1"
            >
              valor
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-8"
      >
        <div
          class="makeStyles-ruleCardStatusDate-9"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          />
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-10"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          >
            Skip Consecutives
          </p>
          <div
            aria-label="skip consecutives disable"
            class="makeStyles-onShotLabel-11 makeStyles-onShotLabelOff-13"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
